Moved the CSS and JS to their shared directories. Also adjusted the footer and added a body tag to avoid the weird content and footer overlapping.

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -60,14 +60,16 @@ html {
 
 body {
   /* Margin bottom by footer height */
-  margin-bottom: 60px;
+  margin-bottom: 100px;
+  padding-bottom: 100px;
 }
 .footer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
+  background-color: aliceblue;
 }
 
 .hiddenForPrinting{
@@ -77,4 +79,12 @@ body {
 .answers {
     font: italic small-caps bold;
     background-color:lightyellow;
+}
+
+.imgRelatedToPrompts {
+    width: 200px;
+    height: 200px;
+    padding: 30px;
+    border-radius: 50%;
+    margin-left: 20px;
 }
